--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About - PhotoFolio Bootstrap Template</title>
+  <title>ArtFrame - Acerca de</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -42,46 +42,34 @@
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <!-- Descomenta la línea de abajo si también deseas usar un logo con imagen -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <i class="bi bi-camera"></i>
-        <h1 class="sitename">PhotoFolio</h1>
+        <h1 class="sitename">ArtFrame</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Home<br></a></li>
-          <li><a href="about.html" class="active">About</a></li>
-          <li class="dropdown"><a href="gallery.html"><span>Gallery</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li><a href="index.html">Inicio<br></a></li>
+          <li><a href="about.html" class="active">Acerca de</a></li>
+          <li class="dropdown"><a href="gallery.html"><span>Galería</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="gallery.html">Nature</a></li>
-              <li><a href="gallery.html">People</a></li>
-              <li><a href="gallery.html">Architecture</a></li>
-              <li><a href="gallery.html">Animals</a></li>
-              <li><a href="gallery.html">Sports</a></li>
-              <li><a href="gallery.html">Travel</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
+              <li><a href="gallery.html">Naturaleza</a></li>
+              <li><a href="gallery.html">Personas</a></li>
+              <li><a href="gallery.html">Arquitectura</a></li>
+              <li><a href="gallery.html">Animales</a></li>
+              <li><a href="gallery.html">Deportes</a></li>
+              <li><a href="gallery.html">Viajes</a></li>
             </ul>
           </li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="services.html">Servicios</a></li>
+          <li><a href="contact.html">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.instagram.com/david_leo005/" class="instagram"><i class="bi bi-instagram"></i></a>
       </div>
 
     </div>
@@ -89,15 +77,15 @@
 
   <main class="main">
 
-    <!-- Page Title -->
+    <!-- Título de la Página -->
     <div class="page-title" data-aos="fade">
       <div class="heading">
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>About</h1>
-              <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
-              <a href="contact.html" class="cta-btn">Available for Hire<br></a>
+              <h1>Acerca de</h1>
+              <p class="mb-0">Odio y unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+              <a href="contact.html" class="cta-btn">Disponible para Contratar<br></a>
             </div>
           </div>
         </div>
@@ -105,14 +93,14 @@
       <nav class="breadcrumbs">
         <div class="container">
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">About</li>
+            <li><a href="index.html">Inicio</a></li>
+            <li class="current">Acerca de</li>
           </ol>
         </div>
       </nav>
-    </div><!-- End Page Title -->
+    </div><!-- Fin Título de la Página -->
 
-    <!-- About Section -->
+    <!-- Sección Acerca de -->
     <section id="about" class="about section">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -122,7 +110,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-5 content">
-            <h2>UI/UX DesiProfessional Photographer from New Yorkgner &amp; Web Developer.</h2>
+            <h2>Fotógrafo Profesional de Nueva York.</h2>
             <p class="fst-italic py-3">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
@@ -130,18 +118,18 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Cumpleaños:</strong> <span>1 Mayo 1995</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Sitio Web:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Teléfono:</strong> <span>+123 456 7890</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Nueva York, EE.UU.</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Edad:</strong> <span>30</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Grado:</strong> <span>Maestría</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponible</span></li>
                 </ul>
               </div>
             </div>
@@ -158,16 +146,16 @@
 
       </div>
 
-    </section><!-- /About Section -->
+    </section><!-- /Sección Acerca de -->
 
-    <!-- Testimonials Section -->
+    <!-- Sección Testimonios -->
     <section id="testimonials" class="testimonials section">
 
-      <!-- Section Title -->
+      <!-- Título de la Sección -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Testimonials</h2>
-        <p>What they are saying</p>
-      </div><!-- End Section Title -->
+        <h2>Testimonios</h2>
+        <p>Lo que dicen</p>
+      </div><!-- Fin Título de la Sección -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -210,10 +198,10 @@
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
                   <h3>Saul Goodman</h3>
-                  <h4>Ceo &amp; Founder</h4>
+                  <h4>CEO &amp; Fundador</h4>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- Fin elemento de testimonio -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -226,10 +214,10 @@
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                   <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
+                  <h4>Diseñadora</h4>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- Fin elemento de testimonio -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -242,10 +230,10 @@
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                   <h3>Jena Karlis</h3>
-                  <h4>Store Owner</h4>
+                  <h4>Propietaria de Tienda</h4>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- Fin elemento de testimonio -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -261,7 +249,7 @@
                   <h4>Freelancer</h4>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- Fin elemento de testimonio -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -274,10 +262,10 @@
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                   <h3>John Larson</h3>
-                  <h4>Entrepreneur</h4>
+                  <h4>Emprendedor</h4>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- Fin elemento de testimonio -->
 
           </div>
           <div class="swiper-pagination"></div>
@@ -285,7 +273,7 @@
 
       </div>
 
-    </section><!-- /Testimonials Section -->
+    </section><!-- /Sección Testimonios -->
 
   </main>
 
@@ -293,41 +281,38 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">PhotoFolio</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">PhotoFolio</strong> <span>Todos los Derechos Reservados</span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.instagram.com/david_leo005/"><i class="bi bi-instagram"></i></a>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Todos los enlaces en el pie de página deben permanecer intactos. -->
+        <!-- Puedes eliminar los enlaces solo si has comprado la versión pro. -->
+        <!-- Información de licencia: https://bootstrapmade.com/license/ -->
+        <!-- Compra la versión pro con formulario de contacto PHP/AJAX funcional: [buy-url] -->
+        Diseñado por <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
 
   </footer>
 
-  <!-- Scroll Top -->
+  <!-- Botón de Desplazamiento Superior -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Preloader -->
+  <!-- Precargador -->
   <div id="preloader">
     <div class="line"></div>
   </div>
 
-  <!-- Vendor JS Files -->
+  <!-- Archivos JS de Proveedores -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-  <!-- Main JS File -->
+  <!-- Archivo JS Principal -->
   <script src="assets/js/main.js"></script>
 
 </body>
