--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Contact - PhotoFolio Bootstrap Template</title>
+  <title>ArtFrame - Contacto</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -42,46 +42,33 @@
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <i class="bi bi-camera"></i>
-        <h1 class="sitename">PhotoFolio</h1>
+        <!-- Descomenta la línea de abajo si también deseas usar un logo con imagen -->
+        <img src="assets/img/logo.png" alt="">
+        <h1 class="sitename">ArtFrame</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Home<br></a></li>
-          <li><a href="about.html">About</a></li>
-          <li class="dropdown"><a href="gallery.html"><span>Gallery</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li><a href="index.html">Inicio<br></a></li>
+          <li><a href="about.html">Acerca de</a></li>
+          <li class="dropdown"><a href="gallery.html"><span>Galería</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="gallery.html">Nature</a></li>
-              <li><a href="gallery.html">People</a></li>
-              <li><a href="gallery.html">Architecture</a></li>
-              <li><a href="gallery.html">Animals</a></li>
-              <li><a href="gallery.html">Sports</a></li>
-              <li><a href="gallery.html">Travel</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
+              <li><a href="gallery.html">Naturaleza</a></li>
+              <li><a href="gallery.html">Personas</a></li>
+              <li><a href="gallery.html">Arquitectura</a></li>
+              <li><a href="gallery.html">Animales</a></li>
+              <li><a href="gallery.html">Deportes</a></li>
+              <li><a href="gallery.html">Viajes</a></li>
             </ul>
           </li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html" class="active">Contact</a></li>
+          <li><a href="services.html">Servicios</a></li>
+          <li><a href="contact.html" class="active">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.instagram.com/david_leo005/" class="instagram"><i class="bi bi-instagram"></i></a>
       </div>
 
     </div>
@@ -89,14 +76,14 @@
 
   <main class="main">
 
-    <!-- Page Title -->
+    <!-- Título de la Página -->
     <div class="page-title" data-aos="fade">
       <div class="heading">
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>Contact</h1>
-              <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+              <h1>Contacto</h1>
+              <p class="mb-0">Odio y unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
             </div>
           </div>
         </div>
@@ -104,14 +91,14 @@
       <nav class="breadcrumbs">
         <div class="container">
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">Contact</li>
+            <li><a href="index.html">Inicio</a></li>
+            <li class="current">Contacto</li>
           </ol>
         </div>
       </nav>
-    </div><!-- End Page Title -->
+    </div><!-- Fin Título de la Página -->
 
-    <!-- Contact Section -->
+    <!-- Sección de Contacto -->
     <section id="contact" class="contact section">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -121,33 +108,44 @@
 
             <div class="col-lg-4">
               <div class="info-item d-flex align-items-center">
-                <i class="bi bi-geo-alt flex-shrink-0"></i>
+                <i class="bi bi-geo-fill flex-shrink-0"></i>
                 <div>
-                  <h3>Location</h3>
+                  <h3>Ubicación</h3>
                   <p>A108 Adam Street, New York, NY 535022</p>
                 </div>
               </div>
-            </div><!-- End Info Item -->
+            </div><!-- Fin Elemento de Información -->
 
             <div class="col-lg-4">
               <div class="info-item d-flex align-items-center">
-                <i class="bi bi-telephone flex-shrink-0"></i>
+                <i class="bi bi-telephone-inbound-fill flex-shrink-0"></i>
                 <div>
-                  <h3>Call</h3>
+                  <h3>Llamar</h3>
                   <p>+1 5589 55488 55</p>
                 </div>
               </div>
-            </div><!-- End Info Item -->
+            </div><!-- Fin Elemento de Información -->
 
             <div class="col-lg-4">
               <div class="info-item d-flex align-items-center">
-                <i class="bi bi-envelope flex-shrink-0"></i>
+                <a href="https://wa.me/573026347345?text=Hola%2C%20necesito%20informaci%C3%B3n" target="_blank">
+                  <i class="bi bi-whatsapp flex-shrink-0"></i>
+                </a>
                 <div>
-                  <h3>Email</h3>
+                  <h3>Escribenos</h3>
+                </div>
+              </div>
+            </div><!-- Fin Elemento de Información -->
+
+            <div class="col-lg-4">
+              <div class="info-item d-flex align-items-center">
+                <i class="bi bi-envelope-at-fill flex-shrink-0"></i>
+                <div>
+                  <h3>Correo Electrónico</h3>
                   <p>info@example.com</p>
                 </div>
               </div>
-            </div><!-- End Info Item -->
+            </div><!-- Fin Elemento de Información -->
 
           </div>
         </div>
@@ -156,35 +154,45 @@
           <div class="row gy-4">
 
             <div class="col-md-6">
-              <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+              <input type="text" name="name" class="form-control" placeholder="Tu Nombre" required="">
             </div>
 
             <div class="col-md-6 ">
-              <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
+              <input type="email" class="form-control" name="email" placeholder="Tu Correo Electrónico" required="">
             </div>
 
             <div class="col-md-12">
-              <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+              <input type="text" class="form-control" name="subject" placeholder="Asunto" required="">
             </div>
 
             <div class="col-md-12">
-              <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
+              <textarea class="form-control" name="message" rows="6" placeholder="Mensaje" required=""></textarea>
             </div>
 
             <div class="col-md-12 text-center">
-              <div class="loading">Loading</div>
+              <div class="loading">Cargando</div>
               <div class="error-message"></div>
-              <div class="sent-message">Your message has been sent. Thank you!</div>
+              <div class="sent-message">Tu mensaje ha sido enviado. ¡Gracias!</div>
 
-              <button type="submit">Send Message</button>
+              <button type="submit">Enviar Mensaje</button>
             </div>
 
           </div>
-        </form><!-- End Contact Form -->
+        </form><!-- Fin Formulario de Contacto -->
 
       </div>
 
-    </section><!-- /Contact Section -->
+    </section><!-- /Sección de Contacto -->
+
+    <!-- inifio de mapa -->
+    <div class="container">
+
+      <div class="map-wrap d-flex justify-content-center">
+      </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2015335.3587245746!2d-74.74938000219811!3d9.403675642652436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e5d8f7d27c7bf07%3A0xa72b1dc51f284557!2sUniversidad%20Popular%20del%20Cesar%20-%20Aguachica!5e0!3m2!1ses!2sco!4v1745337324468!5m2!1ses!2sco" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
+
 
   </main>
 
@@ -192,41 +200,38 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">PhotoFolio</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">David Sánchez</strong> <span>Todos los Derechos Reservados</span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.instagram.com/david_leo005/"><i class="bi bi-instagram"></i></a>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Todos los enlaces en el pie de página deben permanecer intactos. -->
+        <!-- Puedes eliminar los enlaces solo si has comprado la versión pro. -->
+        <!-- Información de licencia: https://bootstrapmade.com/license/ -->
+        <!-- Compra la versión pro con formulario de contacto PHP/AJAX funcional: [buy-url] -->
+        Diseñado por <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
 
   </footer>
 
-  <!-- Scroll Top -->
+  <!-- Botón de Subir -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Preloader -->
+  <!-- Precargador -->
   <div id="preloader">
     <div class="line"></div>
   </div>
 
-  <!-- Vendor JS Files -->
+  <!-- Archivos JS de Proveedores -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-  <!-- Main JS File -->
+  <!-- Archivo JS Principal -->
   <script src="assets/js/main.js"></script>
 
 </body>
