--- a/gallery-single.html
+++ b/gallery-single.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Gallery Single - PhotoFolio Bootstrap Template</title>
+  <title>ArtFrame - Galeria</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -42,37 +42,28 @@
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <!-- Descomenta la línea de abajo si también deseas usar un logo de imagen -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <i class="bi bi-camera"></i>
-        <h1 class="sitename">PhotoFolio</h1>
+        <h1 class="sitename">ArtFrame</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Home<br></a></li>
-          <li><a href="about.html">About</a></li>
-          <li class="dropdown"><a href="gallery.html"><span>Gallery</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <li><a href="index.html">Home<br></a></li>
+            <li><a href="about.html">Acerca de</a></li>
+            <li class="dropdown"><a href="gallery.html"><span>Galería</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="gallery.html">Nature</a></li>
-              <li><a href="gallery.html">People</a></li>
-              <li><a href="gallery.html">Architecture</a></li>
-              <li><a href="gallery.html">Animals</a></li>
-              <li><a href="gallery.html">Sports</a></li>
-              <li><a href="gallery.html">Travel</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
+              <li><a href="gallery.html">Naturaleza</a></li>
+              <li><a href="gallery.html">Personas</a></li>
+              <li><a href="gallery.html">Arquitectura</a></li>
+              <li><a href="gallery.html">Animales</a></li>
+              <li><a href="gallery.html">Deportes</a></li>
+              <li><a href="gallery.html">Viajes</a></li>
             </ul>
-          </li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+            </li>
+            <li><a href="services.html">Servicios</a></li>
+            <li><a href="contact.html">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -89,15 +80,15 @@
 
   <main class="main">
 
-    <!-- Page Title -->
+    <!-- Título de la Página -->
     <div class="page-title" data-aos="fade">
       <div class="heading">
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>Gallery Single</h1>
+              <h1>Galería Individual</h1>
               <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
-              <a href="contact.html" class="cta-btn">Available for Hire<br></a>
+              <a href="contact.html" class="cta-btn">Disponible para Contratar<br></a>
             </div>
           </div>
         </div>
@@ -105,14 +96,14 @@
       <nav class="breadcrumbs">
         <div class="container">
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">Gallery Single</li>
+            <li><a href="index.html">Inicio</a></li>
+            <li class="current">Galería Individual</li>
           </ol>
         </div>
       </nav>
-    </div><!-- End Page Title -->
+    </div><!-- Fin Título de la Página -->
 
-    <!-- Gallery Details Section -->
+    <!-- Sección de Detalles de la Galería -->
     <section id="gallery-details" class="gallery-details section">
 
       <div class="container" data-aos="fade-up">
@@ -177,7 +168,7 @@
 
           <div class="col-lg-8" data-aos="fade-up">
             <div class="portfolio-description">
-              <h2>This is an example of portfolio details</h2>
+              <h2>Este es un ejemplo de detalles del portafolio</h2>
               <p>
                 Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
               </p>
@@ -194,7 +185,7 @@
                 <div>
                   <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                   <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
+                  <h4>Diseñadora</h4>
                 </div>
               </div>
 
@@ -211,13 +202,13 @@
 
           <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Información del Proyecto</h3>
               <ul>
-                <li><strong>Category</strong> Web design</li>
-                <li><strong>Client</strong> ASU Company</li>
-                <li><strong>Project date</strong> 01 March, 2020</li>
-                <li><strong>Project URL</strong> <a href="#">www.example.com</a></li>
-                <li><a href="#" class="btn-visit align-self-start">Visit Website</a></li>
+                <li><strong>Categoría</strong> Diseño Web</li>
+                <li><strong>Cliente</strong> ASU Company</li>
+                <li><strong>Fecha del Proyecto</strong> 01 Marzo, 2020</li>
+                <li><strong>URL del Proyecto</strong> <a href="#">www.example.com</a></li>
+                <li><a href="#" class="btn-visit align-self-start">Visitar Sitio Web</a></li>
               </ul>
             </div>
           </div>
@@ -226,7 +217,7 @@
 
       </div>
 
-    </section><!-- /Gallery Details Section -->
+    </section><!-- /Sección de Detalles de la Galería -->
 
   </main>
 
@@ -234,41 +225,39 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">PhotoFolio</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Artframe</strong> <span>Todos los Derechos Reservados</span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100094307359476"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/david_leo005/"><i class="bi bi-instagram"></i></a>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Todos los enlaces en el pie de página deben permanecer intactos. -->
+        <!-- Puedes eliminar los enlaces solo si has comprado la versión pro. -->
+        <!-- Información de licencia: https://bootstrapmade.com/license/ -->
+        <!-- Compra la versión pro con formulario de contacto PHP/AJAX funcional: [buy-url] -->
+        Diseñado por <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
 
   </footer>
 
-  <!-- Scroll Top -->
+  <!-- Botón de Subir -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Preloader -->
+  <!-- Precargador -->
   <div id="preloader">
     <div class="line"></div>
   </div>
 
-  <!-- Vendor JS Files -->
+  <!-- Archivos JS de Proveedores -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-  <!-- Main JS File -->
+  <!-- Archivo JS Principal -->
   <script src="assets/js/main.js"></script>
 
 </body>
